Fixed flicker

--- a/style.scss
+++ b/style.scss
@@ -59,10 +59,6 @@ h2 span {
 .project-card:hover {
   transform: scale(1.05);
 }
-.toggle-bar {
-  background-color: $primary-color;
-  border: white;
-}
 
 // Height Classes
 .h-500 {
@@ -284,6 +280,10 @@ nav {
   font-style: italic;
 }
 
+.fixed-height{
+  display: inline-block;
+  min-height: 60px;
+}
 
 .intro {
   display: flex;
